--- a/_config.yml
+++ b/_config.yml
@@ -177,3 +177,8 @@ feed:
         enable: true
         template: "themes/shoka/layout/_alternate/json.ejs"
         output: "feed.json"
+
+# Dark Mode
+# By default, the page judges whether to turn on the dark mode according to the device settings or user selection
+# if `true`, the page will be displayed directly as Dark Mode, unless the user makes another choice
+darkmode: true
